--- a/jinja/element_templates/exchange_item.html.j2
+++ b/jinja/element_templates/exchange_item.html.j2
@@ -1,3 +1,8 @@
+{#
+    Copyright DB InfraGO AG and contributors
+    SPDX-License-Identifier: Apache-2.0
+#}
+
 {% from 'common_macros.html.j2' import show_other_attributes, description, typed_name, linked_name, linked_name_with_icon, display_property_label %}
 {% from 'polarion_props.j2' import table_attributes, th_attributes, td_attributes %}
 
