--- a/jinja/document_templates/logical-architecture/logical-component-mixed-authority.html.j2
+++ b/jinja/document_templates/logical-architecture/logical-component-mixed-authority.html.j2
@@ -4,5 +4,7 @@
 #}
 {% from 'logical-common.html.j2' import render_content %}
 
+{% for uuid in uuids %}
 {% set component = model.by_uuid(uuid) %}
 {{ render_content(component, model, session) }}
+{% endfor %}
