fix(capella2polarion): Fixed id

--- a/capella2polarion_document_config.yaml.j2
+++ b/capella2polarion_document_config.yaml.j2
@@ -99,7 +99,7 @@ mixed_authority:
       exchangeItem:
         show_title: False
     sections:
-      Content: logical-component-mixed-authority.html.j2
+      IcdContent: logical-component-mixed-authority.html.j2
     instances:
       - polarion_space: _default
         polarion_name: Mixed authority showcase
