fix(capella2polarion): Fix templates

--- a/jinja/document_templates/icd-interfaces-full_authority.html.j2
+++ b/jinja/document_templates/icd-interfaces-full_authority.html.j2
@@ -12,7 +12,7 @@
 <div id="polarion_wiki macro name=page_break" contentEditable="false" data-is-landscape="false"></div>
 {{ heading(2, "Introduction", session)}}
 <p>
-This Interface Control Document only covers software message based communication (application layer) between ETCS compatible components.
+This Interface Control Document only covers software message based communication (application layer) between compatible components.
 At the moment physical interface definition is not in scope for this document.
 The scope of the document covers Interface Requirements and Definition
 </p>
