--- a/capella2polarion_document_config.yaml.j2
+++ b/capella2polarion_document_config.yaml.j2
@@ -58,6 +58,12 @@ full_authority:
         fields_at_end:
           - context_diagram
           - allocated_functions
+      logicalActor:
+        fields_at_start:
+          - id
+        fields_at_end:
+          - context_diagram
+          - allocated_functions
       componentExchange:
         fields_at_start:
           - id
@@ -84,6 +90,12 @@ mixed_authority:
       text:
         show_title: False
       logicalComponent:
+        fields_at_start:
+          - id
+        fields_at_end:
+          - context_diagram
+          - allocated_functions
+      logicalActor:
         fields_at_start:
           - id
         fields_at_end:
