fix(capella2polarion): Update config

--- a/capella2polarion_document_config.yaml.j2
+++ b/capella2polarion_document_config.yaml.j2
@@ -55,12 +55,18 @@ full_authority:
       logicalComponent:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       logicalActor:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       componentExchange:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       exchangeItem:
         show_title: False
     instances:
@@ -82,12 +88,18 @@ mixed_authority:
       logicalComponent:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       logicalActor:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       componentExchange:
         fields_at_start:
           - id
+        fields_at_end:
+          - context_diagram
       exchangeItem:
         show_title: False
     sections:
