--- a/jinja/element_templates/component_exchange.html.j2
+++ b/jinja/element_templates/component_exchange.html.j2
@@ -3,7 +3,7 @@
     SPDX-License-Identifier: Apache-2.0
 #}
 
-{% from 'common_macros.html.j2' import linked_name, description %}
+{% from 'common_macros.html.j2' import linked_name_with_icon %}
 {% from 'polarion_props.j2' import table_attributes, th_attributes, td_attributes %}
 
 {% macro describe_exchange(object) %}
@@ -11,15 +11,13 @@
 {%- set target_function = object.target.owner -%}
 {%- set source = source_function.owner -%}
 {%- set target = target_function.owner -%}
-The {{ source | link_work_item }} shall provide {{ object | link_work_item }} to {{ target | link_work_item }} so that the {{ target | link_work_item }} could {{ target_function | link_work_item }}.
+The {{ linked_name_with_icon(source) | safe }} shall provide {{ linked_name_with_icon(object) | safe }} to {{ linked_name_with_icon(target) | safe }} so that the {{ linked_name_with_icon(target) | safe }} could {{ linked_name_with_icon(target_function) | safe }}.
 {% endmacro %}
 
 <span style="font-weight: bold;font-size: 12pt;line-height: 1.5;">Interface Partners</span>
-<p>This logical interface connects between {{ object.source.owner | link_work_item}} and {{ object.target.owner | link_work_item}}.</p>
+<p>This logical interface connects between {{ linked_name_with_icon(object.source.owner) | safe}} and {{ linked_name_with_icon(object.target.owner) | safe}}.</p>
 <p>The need for the interface is explained and requirements are provided so that the interface partners could find an appropriate interface definition (solution).</p>
-<h2>Enabled interactions</h2>
-<p>The figure below provides an overview of the behaviors that depend on this interface:</p>
-{{ object.context_diagram.as_html_img | safe }}
+<span style="font-weight: bold;font-size: 12pt;line-height: 1.5;">Enabled interactions</span>
 <p>This interface enables the following interactions:</p>
 <table {{table_attributes}}>
     <thead>
@@ -31,18 +29,18 @@ The {{ source | link_work_item }} shall provide {{ object | link_work_item }} to
     <tbody>
     {% for exchange in object.allocated_functional_exchanges %}
         <tr>
-            <td {{td_attributes}}>{{ exchange | link_work_item }}</td>
+            <td {{td_attributes}}>{{ linked_name_with_icon(exchange) | safe }}</td>
             <td {{td_attributes}}>
                 {{ describe_exchange(exchange) | safe }}
                 {% if exchange.exchange_items | length > 1 %}
                 <p>{{ exchange.name }} is further specified via the following Exchange Items:</p>
                 <ul>
                     {% for item in exchange.exchange_items %}
-                    <li>{{ item | link_work_item }}</li>
+                    <li>{{ linked_name_with_icon(item) | safe }}</li>
                     {% endfor %}
                 </ul>
                 {% elif exchange.exchange_items %}
-                <p>This interaction is further specified via {{ exchange.exchange_items[0] | link_work_item}}.</p>
+                <p>This interaction is further specified via {{ linked_name_with_icon(exchange.exchange_items[0]) | safe}}.</p>
                 {% endif %}
             </td>
         </tr>
