--- a/jinja/element_templates/scenario.html.j2
+++ b/jinja/element_templates/scenario.html.j2
@@ -1,3 +1,8 @@
+{#
+    Copyright DB InfraGO AG and contributors
+    SPDX-License-Identifier: Apache-2.0
+#}
+
 {% from 'common_macros.html.j2' import description %}
 
 {{ description(object) | safe }}
